fix for body overflow-y

--- a/css/showLoading.css
+++ b/css/showLoading.css
@@ -11,3 +11,7 @@
 	opacity: 0.6;
 	filter: alpha(opacity = 60);
 }
+
+.modal-open{
+overflow: hidden;
+}
